Fixed Sentence Mistakes in translations

--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -4,7 +4,7 @@
   "10 sides": "10 भुजाएँ",
   "2 birds were sitting on the fence. 4 more birds joined them. How many birds are on the fence?": "बाड़ पर 2 पक्षी बैठे थे। उनके साथ 4 और पक्षी आकर बैठ गए। अब बाड़ पर कितने पक्षी हैं?",
   "2 children share 8 sweets equally. How many sweets does each child get?": "2 बच्चे 8 मिठाइयाँ समान रूप से बाँटते हैं। प्रत्येक बच्चे को कितनी मिठाइयाँ मिली?",
-  "20 students were equally divided into 4 groups by the teacher. How many students are in each group?": "शिक्षक द्वारा 20 छात्रों को समान रूप से 4 समूहों में विभाजित किया गया। प्रत्येक समूह में कितने छात्र हैं?",
+  "8 students were equally divided into 2 groups by the teacher. How many students are in each group?": "शिक्षक द्वारा 8 छात्रों को समान रूप से 2 समूहों में विभाजित किया गया। प्रत्येक समूह में कितने छात्र हैं?",
   "3 friends share 12 candies equally. How many candies does each friend get?": "3 मित्र 12 टॉफ़ी को सामान रूप से बाँटते हैं। प्रत्येक मित्र को कितनी टॉफ़ी मिली?",
   "3 sides": "3 भुजाएँ",
   "3D shapes": "3D आकार",
@@ -64,7 +64,7 @@
   "boys": "लड़के",
   "bracelets": "कंगन",
   "Brad has 17 balloons. 8 balloons are red and the rest are green. How many balloons are green?": "राकेश के पास 17 गुब्बारे हैं। जिनमे 8 गुब्बारे लाल हैं और बाकी हरे रंग के गुब्बारे हैं। राकेश के पास कितने हरे गुब्बारे हैं?",
-  "Brittany has 7 shirts in her closet.3 of them are blue and the rest are green. How many green shirts does she have?": "सीता की अलमारी में 7 शर्ट हैं। उनमें से 3 नीले रंग की हैं और बाकी हरी रंग की हैं। सीता के पास कुल कितनी हरी शर्ट है?",
+  "Brittany has 7 shirts in her closet. 3 of them are blue and the rest are green. How many green shirts does she have?": "सीता की अलमारी में 7 शर्ट हैं। उनमें से 3 नीले रंग की हैं और बाकी हरी रंग की हैं। सीता के पास कुल कितनी हरी शर्ट है?",
   "butterflies": "तितलियों",
   "Cancel": "रद्द",
   "Cannot verify OTP": "OTP को सत्यापित नहीं किया जा सकता",
@@ -103,7 +103,7 @@
   "Dairy Rewards": "डेयरी पुरस्कार",
   "days": "दिन",
   "Deanna has 5 more puzzles than Fatou. Fatou has 3 puzzles. How many puzzles does Deanna have?": "एक फुटबॉल टीम ने पहले हाफ में 3 गोल किए।\nफिर उन्होंने दूसरे हाफ में अधिक गोल किए।\nउन्होंने 5 गोल से गेम जीता! दूसरे हाफ में उन्होंने कितने गोल किए?",
-  "Diego has 11 mangos in a basket. Diego gives 4 mangos to his sister. How many mangos are left in the basket?": "धीर के पास एक टोकरी में 11 आम हैं। धीर अपनी बहन को 4 आम देता है। टोकरी में कितने आम बचे हैं?",
+  "Diego has 11 mangoes in a basket. Diego gives 4 mangoes to his sister. How many mangoes are left in the basket?": "धीर के पास एक टोकरी में 11 आम हैं। धीर अपनी बहन को 4 आम देता है। टोकरी में कितने आम बचे हैं?",
   "Division": "विभाजन",
   "Digital Skills": "डिजिटल कौशल",
   "Done": "हो गया",
@@ -330,7 +330,7 @@
   "There are 8 books on the shelf. Marta put 6 more books on the shelf. How many books are on the shelf?": "शेल्फ पर 8 किताबें हैं।मीशा ने 6 और किताबें शेल्फ पर रखीं।अब कितनी किताबें शेल्फ पर हैं?",
   "There are 9 children in a classroom. 6 of them are boys. How many girls are in the classroom?": "एक कक्षा में 9 बच्चे हैं। इनमें से 6 लड़के हैं| कक्षा में कितनी लड़कियाँ हैं?",
   "There are 9 kites flying in the sky. A wind blows 3 kites down on the ground. How many kites are still flying in the sky?": "आसमान में 9 पतंगें उड़ रही हैं। एक हवा का झोंका 3 पतंगों को जमीन पर गिरा देती हैं। कितनी पतंगें अभी भी आसमान में उड़ रही हैं?",
-  "There are some crickets in a jar. You collect 5 more crickets and now have 10 crickets in all. How many crickets did you start with?": "एक जार में कुछ सिक्के हैं| आप 5 और सिक्के एकत्र करते हैं और अब आपके पास कुल 10 सिक्के हैं। आपने कितने सिक्कों से शुरुआत की?",
+  "There are some coins in a jar. You collect 5 more coins and now have 10 coins in all. How many coins did you start with?": "एक जार में कुछ सिक्के हैं| आप 5 और सिक्के एकत्र करते हैं और अब आपके पास कुल 10 सिक्के हैं। आपने कितने सिक्कों से शुरुआत की?",
   "There were some seashells in Megan's pail. She finds 2 more seashells. Now she has 8 seashells in all. How many seashells did she start with?": "माही की टोकरी में कुछ फूल थे।उसे 2 फूल और मिले। अब उसके पास कुल मिलाकर 8 फूल हैं। शुरुआत में माहि के पास कितने फूल थे?",
   "This week": "इस सप्ताह",
   "This week rank": "इस सप्ताह रैंक",
