--- a/assets/resources/lang/kn/i18n.json
+++ b/assets/resources/lang/kn/i18n.json
@@ -4,7 +4,7 @@
   "10 sides": "10 ಬದಿ",
   "2 birds were sitting on the fence. 4 more birds joined them. How many birds are on the fence?": "2 ಪಕ್ಷಿಗಳು ಬೇಲಿ ಮೇಲೆ ಕುಳಿತಿದ್ದವು. ಇನ್ನು 4 ಪಕ್ಷಿಗಳು ಅವರನ್ನು ಸೇರಿಕೊಂಡವು.ಈಗ ಬೇಲಿಯಲ್ಲಿ ಎಷ್ಟು ಪಕ್ಷಿಗಳು ಇವೆ ?",
   "2 children share 8 sweets equally. How many sweets does each child get?": "2 ಮಕ್ಕಳು 8 ಸಿಹಿತಿಂಡಿಗಳನ್ನು ಸಮಾನವಾಗಿ ಹಂಚಿಕೊಳ್ಳುತ್ತಾರೆ. ಹಾಗಾದರೆ ಪ್ರತಿ ಮಗುವಿಗೆ ಎಷ್ಟು ಸಿಹಿತಿಂಡಿ ಸಿಗುತ್ತದೆ?",
-  "20 students were equally divided into 4 groups by the teacher. How many students are in each group?": "ಶಿಕ್ಷಕರು 20 ವಿದ್ಯಾರ್ಥಿಗಳನ್ನು  ಸಮಾನವಾಗಿ 4 ಗುಂಪುಗಳಾಗಿ ವಿಂಗಡಿಸುತ್ತಾರೆ .ಪ್ರತಿ ಗುಂಪಿನಲ್ಲಿ ಎಷ್ಟು ವಿದ್ಯಾರ್ಥಿಗಳು ಇದ್ದಾರೆ?",
+  "8 students were equally divided into 2 groups by the teacher. How many students are in each group?": "ಶಿಕ್ಷಕರು 8 ವಿದ್ಯಾರ್ಥಿಗಳನ್ನು  ಸಮಾನವಾಗಿ 2 ಗುಂಪುಗಳಾಗಿ ವಿಂಗಡಿಸುತ್ತಾರೆ .ಪ್ರತಿ ಗುಂಪಿನಲ್ಲಿ ಎಷ್ಟು ವಿದ್ಯಾರ್ಥಿಗಳು ಇದ್ದಾರೆ?",
   "3 friends share 12 candies equally. How many candies does each friend get?": "3 ಸ್ನೇಹಿತರು 12 ಮಿಠಾಯಿಗಳನ್ನು ಸಮಾನವಾಗಿ ಹಂಚಿಕೊಳ್ಳುತ್ತಾರೆ. ಪ್ರತಿ ಸ್ನೇಹಿತನಿಗೆ  ಎಷ್ಟು ಮಿಠಾಯಿಗಳು ಸಿಗುತ್ತದೆ?",
   "3 sides": "3 ಬದಿ",
   "3D shapes": "3D ಆಕಾರಗಳು",
@@ -64,7 +64,7 @@
   "boys": "ಹುಡುಗರು",
   "bracelets": "ಕಡಗಗಳು",
   "Brad has 17 balloons. 8 balloons are red and the rest are green. How many balloons are green?": "ಬ್ರಾಡ್ ನ ಬಳಿ 17 ಬಲೂನುಗಳಿವೆ. ಅದರಲ್ಲಿ 8 ಬಲೂನುಗಳು ಕೆಂಪು ಮತ್ತು ಉಳಿದವು ಹಸಿರು.ಬ್ರಾಡ್ ನ ಬಳಿ ಎಷ್ಟು ಹಸಿರು ಬಲೂನುಗಳಿವೆ?",
-  "Brittany has 7 shirts in her closet.3 of them are blue and the rest are green. How many green shirts does she have?": "ಸೀತಾಳ  ಕ್ಲೋಸೆಟ್ನಲ್ಲಿ 7 ಶಿರ್ಟ್ಗಳಿದ್ದವು , ಅವುಗಳಲ್ಲಿ 3 ನೀಲಿ ಮತ್ತು ಉಳಿದವು ಹಸಿರು ಬಣ್ಣದ್ದಾಗಿದ್ದವು.ಅವಳ ಬಳಿ ಎಷ್ಟು ಹಸಿರು ಶರ್ಟ್ಗಳು ಇದ್ದವು?",
+  "Brittany has 7 shirts in her closet. 3 of them are blue and the rest are green. How many green shirts does she have?": "ಸೀತಾಳ  ಕ್ಲೋಸೆಟ್ನಲ್ಲಿ 7 ಶಿರ್ಟ್ಗಳಿದ್ದವು , ಅವುಗಳಲ್ಲಿ 3 ನೀಲಿ ಮತ್ತು ಉಳಿದವು ಹಸಿರು ಬಣ್ಣದ್ದಾಗಿದ್ದವು.ಅವಳ ಬಳಿ ಎಷ್ಟು ಹಸಿರು ಶರ್ಟ್ಗಳು ಇದ್ದವು?",
   "butterflies": "ಚಿಟ್ಟೆಗಳು",
   "Cancel": "ರದ್ದುಮಾಡು",
   "Cannot verify OTP": "OTP ಅನ್ನು ಪರಿಶೀಲಿಸಲು ಸಾಧ್ಯವಿಲ್ಲ",
@@ -104,7 +104,7 @@
   "Dairy Rewards": "ಡೈರಿ ಬಹುಮಾನಗಳು",
   "days": "ದಿನಗಳು",
   "Deanna has 5 more puzzles than Fatou. Fatou has 3 puzzles. How many puzzles does Deanna have?": "ಡೀಯಾನಾಗೆ ಸೀತಾಗಿಂತ 5 ಜಾಸ್ತಿ ಪಧಬಂಧಗಳಿವೆ .ಸೀತಾಗೆ 3 ಪದಬಂಧಗಲಿದ್ದರೆ  ಡೀಯಾನಾಗೆ ಎಷ್ಟು ಪಧಬಂಧಗಳಿವೆ?",
-  "Diego has 11 mangos in a basket. Diego gives 4 mangos to his sister. How many mangos are left in the basket?": "ಡಿಯಾಗೋ ಬುಟ್ಟಿಯಲ್ಲಿ 11 ಮಾವಿನಹಣ್ಣುಗಳಿವೆ. ಡಿಯಾಗೋ ತನ್ನ ಸಹೋದರಿಗೆ 4 ಮಾವಿನಹಣ್ಣುಗಳನ್ನು ನೀಡುತ್ತಾಳೆ ಈಗ ಡಿಯಾಗೋ ಬುಟ್ಟಿಯಲ್ಲಿ ಎಷ್ಟು ಮಾವಿನಹಣ್ಣುಗಳಿವೆ ?",
+  "Diego has 11 mangoes in a basket. Diego gives 4 mangoes to his sister. How many mangoes are left in the basket?": "ಡಿಯಾಗೋ ಬುಟ್ಟಿಯಲ್ಲಿ 11 ಮಾವಿನಹಣ್ಣುಗಳಿವೆ. ಡಿಯಾಗೋ ತನ್ನ ಸಹೋದರಿಗೆ 4 ಮಾವಿನಹಣ್ಣುಗಳನ್ನು ನೀಡುತ್ತಾಳೆ ಈಗ ಡಿಯಾಗೋ ಬುಟ್ಟಿಯಲ್ಲಿ ಎಷ್ಟು ಮಾವಿನಹಣ್ಣುಗಳಿವೆ ?",
   "Division": "ವಿಭಜನೆ",
   "Digital Skills": "ಡಿಜಿಟಲ್ ಕೌಶಲ್ಯ",
   "Done": "ಮುಗಿದಿದೆ",
@@ -244,7 +244,7 @@
   "Peter read 6 pages of his book before lunch. After lunch he read some more. If Peter read 9 pages in all, how many pages did he read after lunch?": "ಊಟಕ್ಕೆ ಮುಂಚೆ ಪೀಟರ್ ತನ್ನ ಪುಸ್ತಕದ 6 ಪುಟಗಳನ್ನು  ಓದುತ್ತಾನೆ. ಊಟದ ನಂತರ ಅವನು  ಇನ್ನು ಸ್ವಲ್ಪ ಹೆಚ್ಚು ಓದುತ್ತಾನೆ. ಪೀಟರ್ ಎಲ್ಲಾ ಸೇರಿ 9 ಪುಟಗಳನ್ನು ಓದಿದಲ್ಲಿ, ಊಟದ ನಂತರ ಅವನು ಎಷ್ಟು ಪುಟಗಳನ್ನು ಓದಿದನು?",
   "people": "ಜನರು",
   "pencil": "ಪೆನ್ಸಿಲ್",
-  "pencils": "ಪೆನ್ಸಿಲುಗಳು ",
+  "pencils": "ಪೆನ್ಸಿಲುಗಳು",
   "Phone number :": "ದೂರವಾಣಿ ಸಂಖ್ಯೆ :",
   "Phone number is already used": "ಫೋನ್ ಸಂಖ್ಯೆಯನ್ನು ಈಗಾಗಲೇ ಬಳಸಲಾಗಿದೆ",
   "Profile": "ವಿವರ",
