Added Missing translations and setting maths00 chapter after playing prequiz

--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -293,6 +293,7 @@
   "WhatsApp": "WhatsApp",
   "Which group is bigger?": "Which group is bigger?",
   "Which is a circle?": "Which is a circle?",
+  "Which is a square?": "Which is a square?",
   "Which is the biggest?": "Which is the biggest?",
   "Write here": "Write here",
   "Yesterday, the store had 7 bags of rice. Today, the store has 2 bags of rice. How many bags of rice did the store sell?": "Yesterday, the store had 7 bags of rice. Today, the store has 2 bags of rice. How many bags of rice did the store sell?",
